--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-react": "^5.7.1",
     "@excalidraw/excalidraw": "^0.18.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vapi-ai/web": "^2.3.9",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
