--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.7.1",
     "@excalidraw/excalidraw": "^0.18.0",
+    "@firecms/neat": "^0.4.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@vapi-ai/web": "^2.3.9",
     "axios": "^1.7.7",
